# ECE474_assignment3

./: CMakeLists.txt  IOWire.cpp  IOWire.h  README.txt  test_dpgen.sh  test_hlsyn.sh
assignment2/src/: circuitParser.cpp  main.cpp
src/: CMakeLists.txt  IOWire.cpp  IOWire.h  Module.cpp  Module.h  Parser.h  argumentChecker.cpp  argumentChecker.h  circuitParser.cpp  circuitParser.h  hardwareComponent.cpp  hardwareComponent.h  main.cpp  parser.cpp  topModule.cpp  topModule.h  verilog.cpp  verilog.h
testing/: error1.v  error2.v  hls_lat_test.v  hls_lat_test1.bm  hls_lat_test2.v  hls_lat_test3.bm  hls_lat_test4.bm  hls_lat_test5.v  hls_lat_test6.bm  hls_test1.v  hls_test2.bm  hls_test3.v  hls_test4.v  hls_test5.bm  hls_test6.bm  hls_test7.bm  hls_test8.bm  hlsyn  test_if1.bm  test_if2.v  test_if3.bm  test_if4.v
